--- a/AndroidProject/app/src/main/res/values/styles.xml
+++ b/AndroidProject/app/src/main/res/values/styles.xml
@@ -6,6 +6,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:fontFamily">@font/noto_sans</item>
+    </style>
+
+    <style name="HeadingTextStyle" parent="Base.TextAppearance.AppCompat.Large">
+        <item name="android:fontFamily">@font/noto_sans</item>
     </style>
 
 </resources>
