--- a/AndroidProject/app/src/main/res/values/styles.xml
+++ b/AndroidProject/app/src/main/res/values/styles.xml
@@ -14,4 +14,8 @@
         <item name="android:fontFamily">@font/noto_sans</item>
     </style>
 
+    <style name="TaskTextStyle" parent="Base.TextAppearance.AppCompat.Headline">
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
 </resources>
