--- a/AndroidProject/app/src/main/res/layout/activity_main_new_task_bottom_sheet_fragment.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main_new_task_bottom_sheet_fragment.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main_bottom_sheet_bs"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     style="@style/BottomSheetDialogTheme"
     android:paddingBottom="8dp"
     android:paddingTop="8dp"
-    app:behavior_hideable="true"
-    app:behavior_peekHeight="56dp"
-    android:background="@drawable/bottom_sheet_background"
-    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+    android:background="@drawable/bottom_sheet_background">
 
     <!-- NOTE: This list should be displayed in a list
     instead of nested layouts -->
