--- a/AndroidProject/app/src/main/res/layout/activity_main_single_task_layout.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main_single_task_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/task_layout_text_main_activity_task_list_tv"
+        android:userId="@+userId/task_layout_text_main_activity_task_list_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/TaskTextStyle"/>
