Task 3: Database and Dao and Entities Created

--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".ui_controller.MainActivity">
 
     <TextView
-        android:userId="@+userId/list_name_main_activity_tv"
+        android:id="@+id/list_name_main_activity_tv"
         style="@style/HeadingTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,24 +19,24 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:userId="@+userId/task_list_main_activity_rv"
+        android:id="@+id/task_list_main_activity_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/element_margin"
 
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@userId/list_name_main_activity_tv"/>
+        app:layout_constraintTop_toBottomOf="@id/list_name_main_activity_tv"/>
 
     <include
-        android:userId="@+userId/bottom_sheet_fragment_layout"
+        android:id="@+id/bottom_sheet_fragment_layout"
         layout="@layout/activity_main_bottom_sheet_fragment"/>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:userId="@+userId/main_activity_new_task_fab"
+        android:id="@+id/main_activity_new_task_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_anchor="@userId/bottom_sheet_fragment_layout"
+        app:layout_anchor="@id/bottom_sheet_fragment_layout"
         app:layout_anchorGravity="bottom|end"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"/>
