--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/element_margin"
 
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/list_name_main_activity_tv"/>
+        app:layout_anchor="@id/list_name_main_activity_tv"
+        app:layout_anchorGravity="bottom"/>
 
     <include
         android:id="@+id/bottom_sheet_fragment_layout"
@@ -39,6 +39,6 @@
         app:layout_anchor="@id/bottom_sheet_fragment_layout"
         app:layout_anchorGravity="bottom|end"
         android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"/>
+        android:layout_margin="@dimen/element_margin"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
