--- a/AndroidProject/app/src/main/res/values/styles.xml
+++ b/AndroidProject/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
         <item name="android:fontFamily">@font/noto_sans</item>
     </style>
 
-    <style name="HeadingTextStyle" parent="Base.TextAppearance.AppCompat.Large">
+    <style name="HeadingTextStyle" parent="Base.TextAppearance.AppCompat.Display1">
         <item name="android:fontFamily">@font/noto_sans</item>
     </style>
 
