--- a/AndroidProject/app/src/main/res/xml/my_goals_widget_info.xml
+++ b/AndroidProject/app/src/main/res/xml/my_goals_widget_info.xml
@@ -2,9 +2,11 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/my_goals_widget"
     android:initialLayout="@layout/my_goals_widget"
-    android:minWidth="40dp"
-    android:minHeight="40dp"
+    android:minWidth="100dp"
+    android:minHeight="100dp"
     android:previewImage="@drawable/example_appwidget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen">
+
+</appwidget-provider>
