Task 5: Adding database queries to the Widget

--- a/AndroidProject/app/src/main/res/layout/my_goals_widget.xml
+++ b/AndroidProject/app/src/main/res/layout/my_goals_widget.xml
@@ -8,6 +8,7 @@
        android:id="@+id/widget_new_task_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
+       android:textColor="@android:color/black"
        android:layout_margin="@dimen/element_margin" />
 
 </RelativeLayout>
