--- a/AndroidProject/app/src/main/res/layout/activity_update_task.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_update_task.xml
@@ -32,4 +32,16 @@
         app:layout_constraintEnd_toEndOf="@id/update_activity_edit_task_til"
         app:layout_constraintTop_toBottomOf="@id/update_activity_edit_task_til"/>
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/update_activity_delete_task_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/element_margin"
+        android:text="@string/update_activity_delete_task_btn"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+
+        app:layout_constraintTop_toTopOf="@+id/update_activity_update_task_btn"
+        app:layout_constraintBottom_toBottomOf="@+id/update_activity_update_task_btn"
+        app:layout_constraintEnd_toStartOf="@id/update_activity_update_task_btn"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
