--- a/AndroidProject/app/src/main/res/layout/activity_main_single_task_layout.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main_single_task_layout.xml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?attr/selectableItemBackground"
     android:padding="16dp">
+
+    <RadioGroup
+        android:id="@+id/select_task_rg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <RadioButton android:id="@+id/select_task_rb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </RadioGroup>
+
 
     <TextView
         android:id="@+id/task_layout_text_main_activity_task_list_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/TaskTextStyle"/>
+        style="@style/TaskTextStyle"
+
+        app:layout_constraintTop_toTopOf="@id/select_task_rg"
+        app:layout_constraintBottom_toBottomOf="@id/select_task_rg"
+        app:layout_constraintStart_toEndOf="@id/select_task_rg"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
