--- a/AndroidProject/app/src/main/res/layout/activity_main_bottom_sheet_fragment.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main_bottom_sheet_fragment.xml
@@ -10,6 +10,7 @@
     android:paddingTop="8dp"
     app:behavior_hideable="false"
     app:behavior_peekHeight="56dp"
+    android:layout_margin="@dimen/element_margin"
     android:background="@drawable/bottom_sheet_background"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
