--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_light"
     tools:context=".ui_controller.MainActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -19,12 +20,14 @@
         android:id="@+id/list_name_main_activity_tv"
         style="@style/HeadingTextStyle"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/noto_sans"
+        android:textStyle="normal"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/element_margin"
-        tools:text="Hello World!"
-
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Hello World!" />
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -47,6 +50,7 @@
         android:layout_height="wrap_content"
         app:layout_anchor="@id/bottom_sheet_fragment_layout"
         app:layout_anchorGravity="bottom|end"
+        android:elevation="@dimen/fab_elevation"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/element_margin"/>
 
