--- a/AndroidProject/app/src/main/res/layout/activity_main_single_task_layout.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main_single_task_layout.xml
@@ -27,6 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/TaskTextStyle"
+        android:layout_marginStart="@dimen/element_margin"
+        android:layout_marginLeft="@dimen/element_margin"
 
         app:layout_constraintTop_toTopOf="@id/select_task_rg"
         app:layout_constraintBottom_toBottomOf="@id/select_task_rg"
