--- a/AndroidProject/app/src/main/res/values/styles.xml
+++ b/AndroidProject/app/src/main/res/values/styles.xml
@@ -7,14 +7,15 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <item name="android:fontFamily">@font/noto_sans</item>
+        <item name="android:fontFamily">sans-serif-thin</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="HeadingTextStyle" parent="Base.TextAppearance.AppCompat.Display1">
         <item name="android:fontFamily">@font/noto_sans</item>
     </style>
 
-    <style name="TaskTextStyle" parent="Base.TextAppearance.AppCompat.Headline">
+    <style name="TaskTextStyle" parent="Base.TextAppearance.AppCompat.Medium">
         <item name="android:textColor">@android:color/black</item>
     </style>
 
