--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -24,24 +24,49 @@
         android:textStyle="normal"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/element_margin"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toTopOf="parent"
         tools:text="Hello World!" />
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/task_list_main_activity_rv"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/element_margin"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        app:layout_anchor="@id/list_name_main_activity_tv"
-        app:layout_anchorGravity="bottom|start"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/task_list_main_activity_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+
+            app:layout_anchor="@id/my_toolbar"
+            app:layout_anchorGravity="bottom|start"/>
+
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Completed tasks"
+            android:textAppearance="@style/TaskTextStyle"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/task_list__completed_main_activity_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/element_margin"
+
+            app:layout_anchor="@id/task_list_main_activity_rv"
+            app:layout_anchorGravity="bottom|bottom">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </LinearLayout>
+
+
 
     <include
         android:id="@+id/bottom_sheet_fragment_layout"
         layout="@layout/activity_main_bottom_sheet_fragment"/>
+
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -49,9 +74,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_anchor="@id/bottom_sheet_fragment_layout"
-        app:layout_anchorGravity="bottom|end"
+        app:layout_anchorGravity="top|center"
         android:elevation="@dimen/fab_elevation"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/element_margin"/>
+        android:layout_marginBottom="@dimen/element_margin"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
