--- a/AndroidProject/app/src/main/res/layout/activity_main_single_list_layout.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main_single_list_layout.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:foreground="?attr/selectableItemBackground"
+    android:foreground="@drawable/state_list_drawable"
     android:padding="16dp">
 
     <TextView
