Task 7: Completed Tasks Functionality improved. Shown only if present. Bug still left. Bug:LiveData Setup and changes to be seperated

--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -26,10 +26,10 @@
         android:layout_margin="@dimen/element_margin"
         tools:text="Hello World!" />
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_margin="@dimen/element_margin">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/task_list_main_activity_rv"
@@ -37,16 +37,19 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
 
-            app:layout_anchor="@id/my_toolbar"
-            app:layout_anchorGravity="bottom|start"/>
-
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
 
         <TextView
+            android:id="@+id/completed_task_text_view_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Completed tasks"
-            android:textAppearance="@style/TaskTextStyle"/>
+            android:text="@string/completed_tasks_label"
+            android:textAppearance="@style/TaskTextStyle"
+
+            app:layout_constraintStart_toStartOf="@id/task_list_main_activity_rv"
+            app:layout_constraintTop_toBottomOf="@id/task_list_main_activity_rv"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/task_list__completed_main_activity_rv"
@@ -54,12 +57,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/element_margin"
 
-            app:layout_anchor="@id/task_list_main_activity_rv"
-            app:layout_anchorGravity="bottom|bottom">
+            app:layout_constraintStart_toStartOf="@id/completed_task_text_view_tv"
+            app:layout_constraintTop_toBottomOf="@id/completed_task_text_view_tv">
 
         </androidx.recyclerview.widget.RecyclerView>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
