--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/completed_tasks_label"
+            android:layout_marginTop="@dimen/element_margin"
             android:textAppearance="@style/TaskTextStyle"
 
             app:layout_constraintStart_toStartOf="@id/task_list_main_activity_rv"
