--- a/AndroidProject/app/src/main/res/layout/activity_main_single_task_layout.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main_single_task_layout.xml
@@ -7,19 +7,11 @@
     android:foreground="?attr/selectableItemBackground"
     android:padding="16dp">
 
-    <RadioGroup
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/select_task_rg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <RadioButton android:id="@+id/select_task_rb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    </RadioGroup>
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        app:lottie_fileName="checked_done_.json"/>
 
 
     <TextView
