--- a/AndroidProject/app/src/main/res/layout/activity_splash_screen.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".ui_controller.SplashScreen">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/no_tasks_prsenet"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
