--- a/AndroidProject/firstentrymodule/src/main/res/layout/activity_first_time_install_activivity.xml
+++ b/AndroidProject/firstentrymodule/src/main/res/layout/activity_first_time_install_activivity.xml
@@ -6,6 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".FirstTimeInstallActivivity">
 
+    <ImageView
+        android:id="@+id/install_screen_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/no_login"
+        android:layout_marginTop="100dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/feature_screen_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/feature_screen_text"
+        android:layout_margin="16dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/install_screen_image" />
+
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,7 +37,7 @@
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/feature_screen_text"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
