Task 7: Score point Module design complete

--- a/AndroidProject/app/src/main/res/layout/activity_splash_screen.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,9 +7,9 @@
     tools:context=".ui_controller.SplashScreen">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/no_tasks_prsenet"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/app_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
