--- a/AndroidProject/pointslib/src/main/res/layout/activity_points_points_module.xml
+++ b/AndroidProject/pointslib/src/main/res/layout/activity_points_points_module.xml
@@ -7,6 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".PointsActivity">
 
+    <ImageView
+        android:id="@+id/score_points_image_iv"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/score_points"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/your_points_label"/>
+
     <TextView
         android:id="@+id/your_points_label"
         android:layout_width="wrap_content"
@@ -17,8 +28,8 @@
         tools:text="@string/app_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/score_points_image_iv"
+        app:layout_constraintBottom_toTopOf="@id/motivation_label"/>
 
     <TextView
         android:id="@+id/motivation_label"
@@ -30,7 +41,8 @@
         tools:text="@string/app_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/your_points_label"/>
+        app:layout_constraintTop_toBottomOf="@id/your_points_label"
+        app:layout_constraintBottom_toTopOf="@id/go_back_btn"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/go_back_btn"
@@ -42,6 +54,7 @@
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/motivation_label"/>
+        app:layout_constraintTop_toBottomOf="@id/motivation_label"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
