--- a/AndroidProject/loginlib/src/main/res/layout/activity_login.xml
+++ b/AndroidProject/loginlib/src/main/res/layout/activity_login.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
+    <ImageView
+        android:id="@+id/app_logo_login_iv"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:src="@drawable/app_logo_login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/login_title_tv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <TextView
         android:id="@+id/login_title_tv"
         android:layout_width="wrap_content"
@@ -16,7 +27,8 @@
         android:textStyle="bold"
 
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/app_logo_login_iv"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/login_activity_username_edit_task_til"/>
 
 
@@ -25,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        app:layout_constraintStart_toStartOf="@id/login_title_tv"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_title_tv"
         app:layout_constraintBottom_toTopOf="@id/login_activity_password_edit_task_til">
 
