--- a/AndroidProject/app/src/main/res/values/styles.xml
+++ b/AndroidProject/app/src/main/res/values/styles.xml
@@ -36,4 +36,10 @@
     <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog" />
 
 
+    <!-- Splash Screen theme. -->
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_background</item>
+    </style>
+
+
 </resources>
