--- a/AndroidProject/app/src/main/res/layout/activity_main_bottom_sheet_fragment.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main_bottom_sheet_fragment.xml
@@ -25,7 +25,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-
+        <!--<TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/your_lists_label"
+            android:textColor="@color/colorAccent"
+            style="@style/HeadingTextStyle"/> -->
 
     </LinearLayout>
 
