--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -82,8 +82,10 @@
         android:layout_height="wrap_content"
         app:layout_anchor="@id/bottom_sheet_fragment_layout"
         app:layout_anchorGravity="top|center"
+        style="@style/Widget.MaterialComponents.FloatingActionButton"
+        android:background="@drawable/extended_fab_background"
         app:elevation="@dimen/fab_elevation"
-        app:srcCompat="@drawable/round_add_white_18dp"
+        app:srcCompat="@drawable/rounded_add_white"
         android:layout_marginBottom="@dimen/element_margin"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
