--- a/AndroidProject/app/src/main/res/layout/activity_new_list.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_new_list.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/element_margin"
+        android:hint="@string/new_list_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
