Task 7: Seperated out completed and incomplete tasks

--- a/AndroidProject/app/src/main/res/menu/main_activity_menu.xml
+++ b/AndroidProject/app/src/main/res/menu/main_activity_menu.xml
@@ -16,4 +16,9 @@
         android:title="@string/menu_update_list_label"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/action_completed_tasks"
+        android:title="@string/menu_completed_tasks_label"
+        app:showAsAction="never"/>
+
 </menu>
