--- a/AndroidProject/app/src/main/res/layout/activity_main_single_task_layout.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main_single_task_layout.xml
@@ -7,11 +7,10 @@
     android:foreground="?attr/selectableItemBackground"
     android:padding="16dp">
 
-    <com.airbnb.lottie.LottieAnimationView
+    <RadioButton
         android:id="@+id/select_task_rg"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        app:lottie_fileName="checked_done_.json"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 
     <TextView
