--- a/AndroidProject/app/src/main/res/layout/my_goals_widget.xml
+++ b/AndroidProject/app/src/main/res/layout/my_goals_widget.xml
@@ -52,8 +52,7 @@
 
     <ListView
         android:id="@+id/widget_list_lv"
-        android:layout_marginTop="32dp"
-        android:background="@color/colorAccent"
+        android:background="@color/browser_actions_bg_grey"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
